Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>www.xmr.biz by xmr23</title>
+    <title>xmr.biz by xmr23</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>www.xmr.biz</h1>
-        <p>www.xmr.biz</p>
+        <h1>xmr.biz</h1>
+        <p>xmr.biz</p>
 
         <p class="view"><a href="https://github.com/xmr23/www">View the Project on GitHub <small>xmr23/www</small></a></p>
 
