--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="xmr.biz Homepage : Front Page">
+    <meta name="description" content="Monero Community Resources : Unofficial Community Project">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>xmr.biz Homepage</title>
+    <title>Monero Community Resources</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/xmr23/homepage">View on GitHub</a>
 
-          <h1 id="project_title">xmr.biz Homepage</h1>
-          <h2 id="project_tagline">Front Page</h2>
+          <h1 id="project_title">Monero Community Resources</h1>
+          <h2 id="project_tagline">Unofficial Community Project</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/xmr23/homepage/zipball/master">Download this project as a .zip file</a>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">xmr.biz Homepage maintained by <a href="https://github.com/xmr23">xmr23</a></p>
+        <p class="copyright">Monero Community Resources maintained by <a href="https://github.com/xmr23">xmr23</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
