--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-123
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <link rel="icon" type="image/ico" href="images/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        <title>xmr.biz - Monero Community Resources</title>
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <h1>xmr.biz - Monero Community Resources</h1>
+                <h2></h2>
+                <section id="downloads">
+</section>
+            </div>
+        </header>
+        <div class="container">
+            <section id="main_content">
+                <h3></h3>
+                <h2>About xmr.biz</h2>
+                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer a useful service, that is a (small) effort towards efficient knowledge management, inside the Monero crypto-currency project, by creating synergies and avoid work duplication (e.g. information seeking).</p>
+                <h2>Projects</h2>
+                <p><b>Monero Missives Archive (MMA)</b></p>
+                <p><a href="http://mma.xmr.biz">Monero Missives Archive</a> -&nbsp;This page provides archive mirror&nbsp;and structured index of all <i style="line-height: 1.5;">Monday Monero Missives</i>&nbsp;issues, which is the weekly official report of&nbsp;<a href="http://monero.cc/" style="line-height: 1.5;">The Monero Project</a>.<br>The aim of this page is to ...</p>
+                <p><a href="http://monero.cc/" style="color: rgb(0, 102, 153); text-decoration: none; font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 22.5px; background-color: rgb(222, 222, 222);"></a></p>
+                <p><b>Monero Community Members (MCM)</b></p>
+                <p><a href="http://mcm.xmr.biz">Monero Community Members</a> Directory - The Monero team is composed of a core team and quite a few active community members. mcm.xmr.biz is a directory of Monero Community members. <br>The aim of this page is to support & improve the project organization (by avoiding duplicate work, finding the appropriate contact person, allow efficient communication and information flow, ...) stimulate information exchange in the community.</p>
+                <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
+                <h2>Authors and Contact</h2>
+                <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+                <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">mcm@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.</p>
+                <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
+                <p>Author: netg</p>
+                <p>Contributors: davidlatapie, fluffypony, triplef, sammy007, jwinterm, ...</p>
+                
+            </section>
+        </div>
+    </body>
+</html>
