Update Wording MCM 5

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
                 <h2>Contact and Authors</h2>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-                <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">mcm@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.</p>
+                <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.</p>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
-                <p>Author: netg</p>
+                <p>Author: Team xmr.biz</p>
                 <p>Contributors: davidlatapie, fluffypony, triplef, sammy007, jwinterm, ...</p>
                 
             </section>
