--- a/links.html
+++ b/links.html
@@ -35,7 +35,7 @@
 <p><a href="http://www.monero.cc/">Main Website</a></p>
 <p><a href="https://forum.monero.cc/">Official Forum</a></p>
                : 
-Community FAQ Thread: 
+Community FAQ Threadddd: 
 Community Recognition Thread: https://bitcointalk.org/index.php?topic=694762.msg7845979
 White Paper: https://cryptonote.org/whitepaper.pdf
 White Paper Review: http://monero.cc/downloads/whitepaper_review.pdf
