--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                                <p><b>Official Webpages</b></p>
-<p><a href="http://www.monero.cc/">Main Website</a></p>
+Main Website<p><a href="http://www.monero.cc/">Main Website</a></p>
 <p><a href="https://forum.monero.cc/">Official Forum</a></p>
                : 
 Community FAQ Threadddd: 
