--- a/links.html
+++ b/links.html
@@ -32,7 +32,8 @@
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                                <p><b>Official Webpages</b></p>
-Main Website:<a href="http://www.monero.cc/">www.monero.cc</a></p>
+<a href="http://www.monero.cc/">www.monero.cc</a><br>
+Main Website
 <p><a href="https://forum.monero.cc/">Official Forum</a></p>
                : 
 Community FAQ Threadddd: 
