--- a/links.html
+++ b/links.html
@@ -34,8 +34,13 @@
                                <p><b>Official Webpages</b></p>
 <a href="http://www.monero.cc/">www.monero.cc</a><br>
 Main Website
-<p><a href="https://forum.monero.cc/">Official Forum</a></p>
-               : 
+<p><a href="https://forum.getmonero.org/">forum.getmonero.org</a></p>
+Official Monero Forum
+
+
+
+<br>
+<br>
 Community FAQ Threadddd: 
 Community Recognition Thread: https://bitcointalk.org/index.php?topic=694762.msg7845979
 White Paper: https://cryptonote.org/whitepaper.pdf
