--- a/links.html
+++ b/links.html
@@ -32,8 +32,8 @@
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                                <p><b>Official Webpages</b></p>
-<a href="http://www.monero.cc/">www.monero.cc</a> Main Website
-<p><a href="https://forum.getmonero.org/">forum.getmonero.org</a></p>Official Monero Forum
+<a href="http://www.monero.cc/">www.monero.cc</a>- Main Website
+<a href="https://forum.getmonero.org/">forum.getmonero.org</a>Official Monero Forum
 
 
 
