--- a/links.html
+++ b/links.html
@@ -24,11 +24,11 @@
                 
                 <h2>Monero Link Directory</h2>
                 <p><b>Official bitcointalk.org-Threads</b></p>
-                <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
-               
-                <p><a href="https://bitcointalk.org/index.php?topic=597878">Monero Economy Thread</a></p>
-                <p><a href="https://bitcointalk.org/index.php?topic=653467">Monero Mining Thread</a></p>
-                <p><a href="https://bitcointalk.org/index.php?topic=721045">Monero Community FAQ</a></p>
+                <a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a><br>
+                <a href="https://bitcointalk.org/index.php?topic=597878">Monero Economy Thread</a><br>
+                <a href="https://bitcointalk.org/index.php?topic=653467">Monero Mining Thread</a><br>
+                <a href="https://bitcointalk.org/index.php?topic=721045">Monero Community FAQ</a><br>
+               <br><br><br><br>
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                 <p><a href="https://bitcointalk.org/index.php?topic=583449.0">Main Monero Thread</a></p>
                                <p><b>Official Webpages</b></p>
