--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
                 <p><a href="http://mma.xmr.biz">Monero Missives Archive</a> -&nbsp;This page provides archive mirror&nbsp;and structured index of all <i style="line-height: 1.5;">Monday Monero Missives</i>&nbsp;issues, which is the weekly official report of&nbsp;<a href="http://monero.cc/" style="line-height: 1.5;">The Monero Project</a>.<br>The aim of this page is to ...</p>
                 <p><a href="http://monero.cc/" style="color: rgb(0, 102, 153); text-decoration: none; font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 22.5px; background-color: rgb(222, 222, 222);"></a></p>
                 <p><b>Monero Community Members (MCM)</b></p>
-        <p>The <a href="http://mcm.xmr.biz">Monero Community Members</a> Directory - The Monero team is composed of a core team and quite a few active community members. <a href="http://mcm.xmr.biz">mcm.xmr.biz</a> is a comprehensive directory of all our contributing community members (incl. function, specialization & contact info), ordered by contributor type-categories.<br>The aim of this page is to support & improve the project organization (by avoiding duplicate work, finding the appropriate contact person, allow efficient communication and information flow, ...) stimulate information exchange in the community.</p>
+        		<p>The <a href="http://mcm.xmr.biz">Monero Community Members</a> Directory - The Monero team is composed of a core team and quite a few active community members. <a href="http://mcm.xmr.biz">mcm.xmr.biz</a> is a comprehensive directory of all our contributing community members (incl. function, specialization & contact info), ordered by contributor type-categories.<br>The aim of this page is to support & improve the project organization (by avoiding duplicate work, finding the appropriate contact person, allow efficient communication and information flow, ...) stimulate information exchange in the community.</p>
                 <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
+                <p><b>Miscellaneous Resources</b></p>
+                <p>Our <a href="http://xmr.biz/links.html">Monero Link Directory</a> features curated links to important Monero resources, services and webpages. The links listed in this directory are selected on the basis of recommendations by the Monero Core Team. We also rely on input from our community of Monero users for suggestions.</p>
+                <p><a href="http://monero.cc/" style="color: rgb(0, 102, 153); text-decoration: none; font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 22.5px; background-color: rgb(222, 222, 222);"></a></p>
+                
                 <h2>Contact and Authors</h2>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
                 <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.</p>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
-                <p>Author: Team xmr.biz</p>
-                <p>Contributors: davidlatapie, fluffypony, triplef, sammy007, jwinterm, ...</p>
+                                <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.</p>
+
+                <p>Thank you to the following members of the community, for their contributions: <br>David Latapie, fluffypony, triplef, sammy007 and jwinterm.</p>
                 
             </section>
         </div>
