--- a/links.html
+++ b/links.html
@@ -89,7 +89,7 @@ cryptlocal.com
 coin-swap.net
 Others: BTC38
                 
-               <br><br> <h2>About xmr.biz</h2>
+            <br><br>    <br><br> <h2>About xmr.biz</h2>
                 <a href="http://xmr.biz">xmr.biz</a> was created as a <i>Center for Community Resources</i> inside The Monero Project. We are organized as independent community member project.
                 <p>Our mission is to make a positive difference for Monero community members. By connecting them to a flexible network of information, support ressources and services. That offers real benefits for all Monero users and is essential to known for everyone interested in efficient developing & testing Monero-related software or researching related subjects.</p>
 Visit <a href="http://xmr.biz">xmr.biz</a> to see a full list of all our projects & services.</p>
