--- a/links.html
+++ b/links.html
@@ -90,11 +90,8 @@ coin-swap.net
 Others: BTC38
                 
             <br><br>    <br><br> <h3>About xmr.biz</h3>
-                <a href="http://xmr.biz">xmr.biz</a> was created as a <i>Center for Community Resources</i> inside The Monero Project. We are organized as independent community member project.
-                <p>Our mission is to make a positive difference for Monero community members. By connecting them to a flexible network of information, support ressources and services. That offers real benefits for all Monero users and is essential to known for everyone interested in efficient developing & testing Monero-related software or researching related subjects.</p>
-Visit <a href="http://xmr.biz">xmr.biz</a> to see a full list of all our projects & services.</p>
-                <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
-                <h2>Contact and Authors</h2>
+                <a href="http://xmr.biz">xmr.biz</a> is a <b>Community Resources Portal</b> for <a href="http://monero.cc/" style="line-height: 1.5;">The Monero Project</a> and is operated by a independent collective of Monero supporters.<p>Our mission is to make a positive difference for Monero community members. By connecting them to a flexible network of information, support ressources and services. That offers real benefits for all Monero users and is essential to known for everyone interested in efficient developing & testing Monero-related software or researching related subjects. Visit <a href="http://xmr.biz">xmr.biz</a> to see a full list of all our activities.
+                         <p><h3>Contact and Authors</h3></p>
                Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.
                 <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.</p>
                                 
