--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p><b>Monero Community Members (MCM)</b></p>
         		<p>The <a href="http://mcm.xmr.biz">Monero Community Members</a> Directory - The Monero team is composed of a core team and quite a few active community members. <a href="http://mcm.xmr.biz">mcm.xmr.biz</a> is a comprehensive directory of all our contributing community members (incl. function, specialization & contact info), ordered by contributor type-categories.<br>The aim of this page is to support & improve the project organization (by avoiding duplicate work, finding the appropriate contact person, allow efficient communication and information flow, ...) stimulate information exchange in the community.</p>
                 <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
-                <p><b>Miscellaneous Resources</b></p>
+                <p><b>Miscellaneous Resources (Misc)</b></p>
                 <p>Our <a href="http://xmr.biz/links.html">Monero Link Directory</a> features curated links to important Monero resources, services and webpages. The links listed in this directory are selected on the basis of recommendations by the Monero Core Team. We also rely on input from our community of Monero users for suggestions.</p>
                 <p><a href="http://monero.cc/" style="color: rgb(0, 102, 153); text-decoration: none; font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 22.5px; background-color: rgb(222, 222, 222);"></a></p>
                 
