--- a/links.html
+++ b/links.html
@@ -21,7 +21,8 @@
               <p><b>Official Project Webpages</b></p>
 <a href="http://www.monero.cc/">www.monero.cc</a> - Main Website<br>
 <a href="https://forum.getmonero.org/">forum.getmonero.org</a> - Monero Forum<br>
-<a href="https://getmonero.org/getting-started/">getmonero.org/getting-started</a> - Beginner Guide
+<a href="https://getmonero.org/getting-started/">getmonero.org/getting-started</a> - Beginner Guide<br> 
+<a href="https://github.com/monero-project">Monero Github Repository</a> - Central Development Hub
 
                 <p><b>Official Monero Threads at bitcointalk.org </b></p>
                 <a href="https://bitcointalk.org/index.php?topic=583449">Main Monero Thread</a><br>
@@ -30,7 +31,7 @@
                 <a href="https://bitcointalk.org/index.php?topic=721045">Monero Community FAQ</a><br>
                 <a href="https://bitcointalk.org/index.php?topic=652305">Monero Tech Support Thread</a><br>
                 <a href="https://bitcointalk.org/index.php?topic=753252">Monero Price Speculation Thread</a><br>
-               
+                <a href="https://bitcointalk.org/index.php?topic=1006772">German Community Thread</a> (unofficial)<br>
                 <p><b>Social Media & Community</b></p>             
 <a href="https://www.reddit.com/r/monero/">Official Subreddit</a><br>
 <a href="https://www.facebook.com/monerocurrency">Official Facebook Page</a><br>
@@ -39,12 +40,13 @@
 
           <p><b>Ecosystem</b></p>   
 <a href="https://mymonero.com/">MyMonero.com</a> - Trustless Web Wallet - Offers: sending and receiving Monero safely and securely, anywhere and any time.<br>
+<a href="https://xmr.to/">xmr.to</a> - Bitcoin Payment Gateway - Offers: making a Bitcoin payment with the strong anonymity provided by Monero. This means you can pay any Bitcoin address in the world, anonymously.<br>
+<a href="http://www.cryptoescrow.eu/">CryptoEscrow.eu</a> - Crypto Currencies Escrow Service - Offers among other things: Escrow Service for Monero E-Commerce & trading.<br>
 <a href="https://www.moneroclub.com/">MoneroClub.com</a> - P2P Exchange Platform - Offers: Trading of any currency for Monero.
 
-
                
-          <p><b>Technology</b></p> 
-          <a href="https://lab.getmonero.org/">Monero Research Lab</a><br>            
+<p><b>Technology</b></p> 
+<a href="https://lab.getmonero.org/">Monero Research Lab</a><br>            
 <a href="https://cryptonote.org/whitepaper.pdf">Original CryptoNote Whitepaper</a><br>
 <a href="https://downloads.getmonero.org/whitepaper_review.pdf">Scientific CryptoNote Whitepaper Review</a>
 
@@ -55,9 +57,8 @@
 <a href="https://github.com/Jojatekok/MoneroGui.Net">MoneroX</a> - MoneroX is a GUI for Monero written in .NET and available for Windows, and soon for Mac and Linux.
 
 <p><b>Blockchain Explorer</b></p> 
-<a href="http://chainradar.com/xmr/blocks">ChainRadar.com</a><br>
-<a href="http://moneroblocks.eu/">Moneroblocks.eu</a><br>
-<a href="https://minergate.com/blockchain/mro/blocks">Minergate.com</a>
+<a href="http://moneroblocks.eu/">MoneroBlocks.eu</a><br>
+<a href="https://minergate.com/blockchain/mro/blocks">MinerGate.com</a>
 
 <p><b>Blockchain Downloads</b></p> 
 <a href="http://downloads.getmonero.org/blockchain/win/blockchain.bin">Windows 64-bit blockchain</a><br>
@@ -66,16 +67,23 @@
 (All three live updated and always current.)
 
 <p><b>Crypto Currency Exchanges</b></p> 
+<a href="https://shapeshift.io">ShapeShift.io</a> - Instantly and no account registration needed.<br>
 <a href="http://poloniex.com">poloniex.com</a><br>
 <a href="https://hitbtc.com">hitbtc.com</a><br>
 <a href="https://bittrex.com">bittrex.com</a><br>
 
+<p><b>Important Community Projects</b></p> 
+<a href="https://bitcointalk.org/index.php?topic=819073">Crypto Kingdom</a> - A game that's happening in a virtual world, that uses Monero (XMR) as money. (Bird's eye 2-D map of square plots with a similar look as <i>Civilization</i> of the year 1991.)<br>
+<a href="http://forkguard.com/">ForkGuard</a> - Monero Network Security Monitor<br>
+<a href="https://moneropric.es/">Monero Prices</a> - Monero Price Monitor & Converter<br>
 
 
 
-<p><b>Miners</b></p> 
-todo???
-<!-- CPU, open source - Wolf`'s CPU miner - Automatically installed on Linux with the install_script.
+
+
+<p><b>Mining Software</b></p> 
+<a href="https://bitcointalk.org/index.php?topic=632724">Wolf`'s CPU Miner</a> - Miner that can be automatically installed on Linux via script.<br>
+<!-- CPU, open source -  - 
 CPU, closed source - yvg1900 - Mu7 Miner Early in development - use at your own risk.
 GPU, open source - Tsiv Nvidia GPU Miner (based on ccminer) Early in development - Thanks Tsiv!
 GPU, closed source - Claymore AMD GPU miner - Early in development - use at your own risk.-->
