--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ The expression <i>educational</i> is to be understood according to its broad mea
                  
                 <h2>Contact and Authors</h2>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-                <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy help you.</p>
+                <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy to help you.</p>
                 <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
                                 <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.</p>
 
