--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="main_content">
                 <h3></h3>
                 <h2>About xmr.biz</h2>
-                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer a useful service, that is a (small) effort towards efficient knowledge management, inside the Monero crypto-currency project, by creating synergies and avoiding inefficiencies, e.g. caused by duplicative work.</p>
+                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management, that is creating synergies for development and is avoiding common inefficiencies (duplicative work, knowledge gaps, etc.)of free projects.</p>
                 <h2>Projects</h2>
                
                 <p><b>Monero Commons (Commons)</b></p>
