--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
             <section id="main_content">
                 <h3></h3>
                 <h2>About xmr.biz</h2>
-                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies (duplicative work, knowledge gaps, etc.) of free software projects.</p>
+                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
                 <h2>Projects</h2>
                
                 <p><b>Monero Commons (Commons)</b></p>
                 <p>
                 The aim of <a href="http://commons.xmr.biz">Monero Commons</a> is to provide a media file repository:
 
-that makes available public domain and freely-licensed educational media content to all, and
-that acts as a common repository for the various projects of the Monero community.<br>
+that makes available public domain and freely-licensed educational media content to all. And acts as a common repository for the various projects of the Monero community.<br>
 The expression <i>educational</i> is to be understood according to its broad meaning of "providing knowledge, instructional or informative".
                  </p>
                
