--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
                 <h2>Projects</h2>
                
-                <p><b>Monero Commons (Commons)</b></p>
+                <p><b>Monero Commons - commons.xmr.biz</b></p>
                 <p>
                 The aim of <a href="http://commons.xmr.biz">Monero Commons</a> is to provide a media file repository:
 
