--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ The expression <i>educational</i> is to be understood according to its broad mea
                  </p>
                
                
-                <p><b>Monero Community Members (MCM)</b></p>
+                <p><b>Monero Community Members - mcm.xmr.biz)</b></p>
         		<p>The <a href="http://mcm.xmr.biz">Monero Community Members</a> Directory - The Monero team is composed of a core team and quite a few active community members. <a href="http://mcm.xmr.biz">mcm.xmr.biz</a> is a comprehensive directory of all our contributing community members (incl. function, specialization & contact info), ordered by contributor type-categories.<br>The aim of this page is to support & improve the project organization (by avoiding duplicate work, finding the appropriate contact person, allow efficient communication and information flow, ...) stimulate information exchange in the community.</p>
                 <h3><a id="core" class="anchor" href="#core" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
                 <p><b>Project Incubator (Labs)</b></p>
