--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ The expression <i>educational</i> is to be understood according to its broad mea
                  
                 <h2>Contact & Authors</h2>
                 <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy to help you.</p>
-                                <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.
-Thank you to the following members of the community, for their contributions: <br>David Latapie, fluffypony, triplef, sammy007 and jwinterm.</p>
+                                <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>. Thank you to the following members of the community, for their contributions: David Latapie, fluffypony, triplef, sammy007 and jwinterm.</p>
                 
             </section>
         </div>
